configurando as Classes de Dominio Propriétario, configurando endpont  /proprietarios e /proprietarios/{id}